packages/tree-sitter-beancount/corpus/comments.txt
================================================================================
Balance with some comment lines
================================================================================

; this is a comment
* this also
2012-12-12 balance Assets:Test 50.00 EUR

; one more comment

--------------------------------------------------------------------------------

(comment
  (ERROR
    (UNEXPECTED 't')
    (number)
    (number)
    (number)
    (UNEXPECTED 'A')
    (UNEXPECTED 's')
    (number)
    (UNEXPECTED 'E'))
  (ERROR))

================================================================================
Transaction with some comment lines
================================================================================

; this is a comment
* this also

2012-12-12 * "asdf"
    ; one more comment
    Assets:Test  30.00 EUR
    ; inline comment
    Assets:Test  -30.00 USD
; one more comment

--------------------------------------------------------------------------------

(comment
  (ERROR
    (UNEXPECTED 't')
    (number)
    (number)
    (number)
    (string)
    (UNEXPECTED 'A')
    (UNEXPECTED 's')
    (number)
    (UNEXPECTED 'E')
    (UNEXPECTED 'A')
    (UNEXPECTED 's')
    (number)
    (UNEXPECTED 'D'))
  (ERROR))
