packages/tree-sitter-beancount/corpus/transactions.txt
================================================================================
Simple transactions
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test  -30.00 USD

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test   ; comment in posting line

--------------------------------------------------------------------------------

(comment
  (ERROR
    (number)
    (number)
    (number)
    (string)
    (UNEXPECTED 'A')
    (UNEXPECTED 's')
    (number)
    (UNEXPECTED 'E')
    (UNEXPECTED 'A')
    (UNEXPECTED 's')
    (number)
    (UNEXPECTED 'D')
    (number)
    (number)
    (number)
    (string)
    (UNEXPECTED 'A')
    (UNEXPECTED 's')
    (number)
    (UNEXPECTED 'E')
    (UNEXPECTED 'A')
    (UNEXPECTED 's')
    (number)
    (number)
    (number)
    (string)
    (UNEXPECTED 'A')
    (UNEXPECTED 's')
    (number)
    (UNEXPECTED 'E')
    (UNEXPECTED 'A')
    (UNEXPECTED 's'))
  (ERROR))

================================================================================
Transaction with cost spec
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR {2012-12-12, "lot-name"}
    Assets:Test  30.00 EUR {30.00 USD}
    Assets:Test  30.00 EUR {30.00 # 20 USD}
    Assets:Test  30.00 {*}
    Assets:Test

--------------------------------------------------------------------------------

(ERROR
  (number)
  (number)
  (number)
  (string)
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'E')
  (number)
  (number)
  (number)
  (string)
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'E')
  (number)
  (UNEXPECTED 'D')
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'E')
  (number)
  (number)
  (UNEXPECTED 'D')
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'A')
  (UNEXPECTED 's'))

================================================================================
Transaction
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test  30.00
    Assets:Test  30.00 {}
    Assets:Test  30.00 EUR {} @
    Assets:Test  30.00 {} @@
    Assets:Test  30.00 {{}} @@
    Assets:Test  10.00 EUR {20.00 USD} @ 20.00 USD
    Assets:Test  EUR
    Assets:Test

--------------------------------------------------------------------------------

(ERROR
  (number)
  (number)
  (number)
  (string)
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'E')
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'E')
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (number)
  (UNEXPECTED 'E')
  (number)
  (UNEXPECTED 'D')
  (number)
  (UNEXPECTED 'D')
  (UNEXPECTED 'A')
  (UNEXPECTED 's')
  (UNEXPECTED 'A')
  (UNEXPECTED 's'))
