packages/tree-sitter-beancount/test/corpus/balance_directive.txt
====
Balance directive
====
2023-06-02 balance Assets:Funds            178558.97+(7969.90+981.68) CNY
----
(file
    (directive
        (balance_directive
            (date)
            (account_name
                (account_type)
            )
            (binary_num_expr
                (number)
                (paren_num_expr
                    (binary_num_expr
                        (number)
                        (number)
                    )
                )
            )
            (currency)
        )
    )
)
