packages/tree-sitter-beancount/test/corpus/event_directive.txt
====
Event directive
====
2014-07-09 event "location" "Paris, France" ; testing 测试
----
(file
    (directive
        (event_directive
            (date)
            (str)
            (str)
        )
    )
    (comment)
)
