packages/tree-sitter-beancount/test/corpus/open_directive.txt
==========
Open directive with metadata
==========
2013-03-14 open Assets:BTrade:HOOLI
  category: "taxable"
2013-03-14 open Income:Invest
  category: 12.30
----

(file
      (directive
        (open_directive
          date: (date)
          account_name: (account_name
            (account_type)))
        
        (metadata
          (metadata_key)
          colon: (colon)
          (str)))
      
      (directive
        (open_directive
          date: (date)
          account_name: (account_name
            (account_type)))
        
        (metadata
          (metadata_key)
          colon: (colon)
          (decimal))))

======
Multiple open directives with comments
======
2023-02-06 open Expenses:Government:IncomeTax
2023-02-13 open Liabilities:CreditCard:CMB ; 注释
2023-02-13 open Liabilities:CreditCard:CMB
; comment
2023-02-06 open Income:Invest CNY,HKD, USD
------
(file
      (directive
        (open_directive
          date: (date)
          account_name: (account_name
            (account_type)))
        )
      (directive
        (open_directive
          date: (date)
          account_name: (account_name
            (account_type))))
      (comment)
      (directive
        (open_directive
          date: (date)
          account_name: (account_name
            (account_type)))
        )
      (comment)
      (directive
        (open_directive
          date: (date)
          account_name: (account_name
            (account_type))
          currencies: (currency)
          currencies: (currency)
          currencies: (currency))))
