packages/tree-sitter-beancount/test/corpus/pad_directive.txt
===
Pad directive
===
2023-06-01 pad Assets:Funds Income:Invest
---
(file
    (directive
        (pad_directive
            (date)
            (account_name
                (account_type)
            )
            (account_name
                (account_type)
            )
        )
    )
)
