packages/tree-sitter-beancount/test/corpus/plugin_dirctive.txt
=====
Plugin directive
=====
plugin "beancount.plugins.module_name"
plugin "beancount.plugins.module_name" "configuration data"
-----
(file
    (directive
        (plugin_directive
            (str)
        )
    )
    (directive
        (plugin_directive
            (str)
            (str)
        )
    )
)